fix the horizontal overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,6 @@ html,body {
     width: 100%;
     /* max-width: 100vw; */
 }
+/* * {
+  outline: 1px solid red;
+} */
